--- a/_portfolio/facct-dei-2024.html
+++ b/_portfolio/facct-dei-2024.html
@@ -4,4 +4,15 @@ excerpt: "I will be using my FAccT DEI Scholar fund to implement a 1-year resear
 collection: portfolio
 ---
 
-More details on the project will follow soon.
+Research Assistants:
+
+**Building Local MT Models**
+[Bethelhem Yemane Mamo](https://betabravah.github.io/)
+[Debora Taye Tesfaye](https://debsh.github.io)
+[Ikram Behiru Nesiru](https://ikrambehiru.github.io/)
+
+
+**Evaluating MT Models**
+[Bontu Fufa Balcha](https://bontu-fufa.github.io/)
+[Elbethel Daniel Zewdie](https://elbethel-dan.github.io/)
+[Jitu Ewnetu Hailu](https://jiituu.github.io/)
